@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 2010-2011 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010-2012 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -60,6 +60,8 @@ import java.net.ProtocolException;
 import java.net.URL;
 import java.util.List;
 import java.util.Map;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 /**
  * A terminating client handler that uses {@link HttpURLConnection} or
@@ -200,6 +202,13 @@ public final class URLConnectionClientHandler extends TerminatingClientHandler {
         Object entity = ro.getEntity();
         if (entity != null) {
             uc.setDoOutput(true);
+
+            if(ro.getMethod().equalsIgnoreCase("GET")) {
+                final Logger logger = Logger.getLogger(URLConnectionClientHandler.class.getName());
+                if(logger.isLoggable(Level.INFO)) {
+                    logger.log(Level.INFO, "GET method with entity will be most likely replaced by POST, see http://java.net/jira/browse/JERSEY-1161");
+                }
+            }
 
             writeRequestEntity(ro, new RequestEntityWriterListener() {
                 public void onRequestEntitySize(long size) {
